plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Devtools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Spatial
	implementation 'org.hibernate:hibernate-spatial:6.6.15.Final'
	implementation 'org.locationtech.jts:jts-core:1.20.0'

	// h2
	runtimeOnly 'com.h2database:h2'
	implementation 'org.orbisgis:h2gis:1.5.0'

	// PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
